# iLL_shotstack

./: .env  .env.example  .gitignore  .validation.toml.example  2-Stage.md  AGENTS.md  BACKWARD_COMPATIBILITY.md  CHANGELOG.md  DEPRECATION_PLAN.md  GEMINI.md  KEYS.md  MIGRATION_GUIDE.md  PROJECT.md  README.md  SERVICE.md  _check.sh  _conv.sh  assemble.py  build.sh  check.py  check_json.py  convert_script.py  hello.json  limitations.md  main.py  migrate_validation.py  pyproject.toml  script_1.json  script_1.md  script_1_1.md  script_content.json  script_content.md  script_content_1.md  script_content_2.json  script_single.json  script_single.md  script_single_1.json  script_video_01.json  script_video_03.json  script_video_04.json  (+13 more)
Content/: .~lock.Сценарий тест.xlsx#  Script.csv  Script.ods  script_content.csv  Сценарий тест.xlsx
docs/: validation_examples.md
fast_clip/: __init__.py  assembler.py  shotstack_client.py  timeline_builder.py  uploader.py
fast_clip/check/: __init__.py  __main__.py  checker.py  validator.py
fast_clip/check/validation/: __init__.py  base.py  config.py  constants.py  field_validator.py  file_checker.py  json_validator.py  models.py
openspec/: config.yaml
tests/: generate_test_data.py  test_integration.py  test_validation.py
tests/data/: complex_template.json  empty_merge_array.json  invalid_aspect_ratios.json  invalid_effects.json  invalid_filters.json  invalid_json_syntax.json  invalid_transitions.json  malformed_placeholders.json  missing_merge_entries.json  missing_required_fields.json  valid_template.json
(+32 files in other folders)
